# too-hot-to-prandtl-control-system

./: Cargo.toml  README.md  build_and_upload.pl
.github/workflows/: main.yml  release.yml  rust.yml
common/: Cargo.toml
common/src/: lib.rs  packet.rs
common/src/physical/: mod.rs  percentage.rs  rpm.rs  valve.rs  voltage.rs
control_system/: Cargo.toml
control_system/src/: controls.rs  main.rs
control_system/src/models/: client_sensor_data.rs  control_event.rs  curve.rs  host_sensor_data.rs  mod.rs  rpm.rs  temperature.rs  voltage.rs
control_system/src/tasks/: control_system.rs  mod.rs
control_system/src/tasks/client_sensors/: task.rs
embedded_firmware/: Cargo.toml
embedded_firmware/src/: blink.rs  led_commander.rs  main.rs  prandtladc.rs  usb_io.rs  write_control_targets_out.rs
embedded_firmware_core/: Cargo.toml
embedded_firmware_core/src/: application.rs  lib.rs
external_dependencies/arduino_mkrzero/: Cargo.toml  build_and_upload.sh
external_dependencies/arduino_mkrzero/examples/: blinky_basic.rs
src/: main.rs  system.rs
src/internals/: mod.rs
src/internals/control_system/: app.rs  mod.rs  models.rs  ports.rs
src/internals/core/: controls.rs  mod.rs  ports.rs  system.rs
src/models/: client_sensor_data.rs  control_event.rs  host_sensor_data.rs  mod.rs  packet.rs  rpm.rs  temperature.rs  voltage.rs
