[package]
name = "too_hot_to_prandtl_control_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
derive_more = "0.99.17"
serde = "1.0.195"
serde_derive = "1.0.195"
serialport = "4.3.0"
thiserror = "1.0.56"
