[package]
name = "too_hot_to_prandtl_control_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
derive_more = "0.99.17"
systemstat = "0.2.3"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features=["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
