[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.196", default-features=false }
postcard = "1.0.8"
fixedstr = { version= "0.5.5", features=["no-alloc", "serde"]}
thiserror-no-std = "2.0.2"
