[package]
name = "control_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
derive_more = "0.99.17"
futures = "0.3.30"
postcard = "1.0.8"
serde = "1.0.196"
serialport = "4.3.0"
systemstat = "0.2.3"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features=["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
