[package]
name = "embedded_firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-semihosting = "0.5.0"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
cortex-m = "0.7"
usbd-serial = "0.1.0"
cortex-m-rtic = "1.0"
postcard = "1.0.8"
serde = {version="1.0.196", default-features=false}
heapless = "0.7.0"
fixedstr = { version= "0.5.5", features=["no-alloc", "serde"]}

[dependencies.embedded_firmware_core]
path = "../embedded_firmware_core"

[dependencies.common]
path = "../common"

[dependencies.atsamd-hal]
version ="0.16"
default-features=false

[dependencies.arduino_mkrzero]
path = "../external_dependencies/arduino_mkrzero"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.usb-device]
version = "0.2.0"
optional = true

[features]
default = ["rt", "atsamd-hal/samd21g", "usb"]
rt =["cortex-m-rt", "atsamd-hal/samd21g-rt"]
usb = ["atsamd-hal/usb", "usb-device"]
unproven=["atsamd-hal/unproven"]
rtic=["atsamd-hal/rtic"]
use_semihosting = []

[profile.release]
codegen-units = 1
debug = true # NOTE: might not need
lto = true

[[bin]]
name = "embedded_firmware"
test = true
bench = false
