[package]
name = "embedded_firmware_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version= "0.2.7", features=["unproven"] }
postcard = "1.0.8"
serde = {version="1.0.196", default-features=false}
heapless = "0.7.0"

[dependencies.common]
path = "../common"
